--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,12 @@
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#000000" />
-    <meta name="Jesus Developer" content="Jesus Eusse Website" />
+    <meta
+      name="Jesus Eusse Developer"
+      content="Jesus Eusse, Full Stack Developer, My Website"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="canonical" href="https://my-store.jesus-dev.com/" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jesus Dev</title>
+    <title>Jesus Eusse | Full Stack Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
