--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       content="Jesus Eusse, Full Stack Developer, My Website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="canonical" href="https://my-store.jesus-dev.com/" />
+    <link rel="canonical" href="https://jesus-dev.com/" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
