--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,29 @@
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#000000" />
+    <meta name="title" content="Jesus Eusse" />
+    <meta name="description" content="Frases asombrosas diarias" />
+    <meta name="language" content="en" />
     <meta
-      name="Jesus Eusse Developer"
-      content="Jesus Eusse, Full Stack Developer, My Website"
+      name="keywords"
+      content="Jesus Niño Eusse, developer, react, JavaScript, programming, flutter, react-native"
     />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="author" content="Jesus Eusse" />
+
+    <meta property="og:title" content="Jesus Eusse" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://jesus-dev.com" />
+    <meta
+      property="og:description"
+      content="Jesus Niño Eusse, Full Stack Developer"
+    />
+    <meta property="og:image:url" content="https://jesus-dev.com/logo192.png" />
+    <meta property="og:image" content="https://jesus-dev.com/logo192.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="500" />
+    <meta property="og:image:alt" content="Jesus Eusse Developer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="canonical" href="https://jesus-dev.com/" />
     <!--
